# RealEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  guide.cfg
.github/workflows/: build.yml  linters.yml
assets/ScreamingBrainStudios/: README.md
assets/characters/Hormelz/: README.md
assets/characters/Hormelz/2hIdle/: GreatSwordKnight_2hIdle5_dir1.json  GreatSwordKnight_2hIdle5_dir3.json  GreatSwordKnight_2hIdle5_dir4.json  GreatSwordKnight_2hIdle5_dir5.json
assets/characters/Hormelz/2hWalk/: GreatSwordKnight_2hWalk_dir1.json  GreatSwordKnight_2hWalk_dir4.json  GreatSwordKnight_2hWalk_dir7.json
assets/characters/Hormelz/Slash/: GreatSwordKnight_Slash_dir1.json  GreatSwordKnight_Slash_dir3.json  GreatSwordKnight_Slash_dir6.json  GreatSwordKnight_Slash_dir7.json
demo/: demo.cfg  demo.txt  guide.cfg  main.c
demo/assets/characters/Hormelz/2hIdle/: GreatSwordKnight_2hIdle5_dir2.json  GreatSwordKnight_2hIdle5_dir6.json  GreatSwordKnight_2hIdle5_dir7.json  GreatSwordKnight_2hIdle5_dir8.json
demo/assets/characters/Hormelz/2hWalk/: GreatSwordKnight_2hWalk_dir2.json  GreatSwordKnight_2hWalk_dir3.json  GreatSwordKnight_2hWalk_dir5.json  GreatSwordKnight_2hWalk_dir6.json  GreatSwordKnight_2hWalk_dir8.json
demo/assets/characters/Hormelz/Slash/: GreatSwordKnight_Slash_dir2.json  GreatSwordKnight_Slash_dir4.json  GreatSwordKnight_Slash_dir5.json  GreatSwordKnight_Slash_dir8.json
demo/assets/tiles/ScreamingBrainStudios/: README.md
demo/assets/tiles/ScreamingBrainStudios/Isometric_Grid_Pack/: License.txt
include/: animation.h  app.h  asset.h  asset_manager.h  camera.h  cfg_loader.h  cfg_parser.h  entity.h  err.h  errors.h  hash.h  include.h  main.h  player.h  render.h  renderer.h  scene.h  types.h  user_defined.h  utils.h  world.h
src/: animation.c  app.c  asset.c  asset_manager.c  camera.c  cfg_loader.c  cfg_parser.c  entity.c  hash.c  main.c  player.c  render.c  renderer.c  user_defined.c  world.c
tests/: test_app.c  test_entity.c  test_runner.c  tests_app.c  tests_asset.c  tests_cfg_loader.c  tests_entity.c  tests_render.c
